--- a/LAB319.5.1/package.json
+++ b/LAB319.5.1/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.mjs",
+  "type": "module",
   "scripts": {
     "start": "node index.mjs",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,7 +13,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "kill-port": "^2.0.1",
