--- a/LAB319.5.1/.env
+++ b/LAB319.5.1/.env
@@ -1,2 +1,2 @@
-ATLAS_URI = mongodb+srv://beviatori:qwert678@mongopractice.xzpdufj.mongodb.net/?retryWrites=true&w=majority&appName=MongoPractice
+ATLAS_URI = mongodb+srv://beviatori:qwert678@mongopractice.xzpdufj.mongodb.net/sample_training?retryWrites=true&w=majority&appName=MongoPractice
 POST = 5050;
